- Fix star icon overflow on 820px - Change Google image to Meta on 2nd Card Item

--- a/Testimonial Page/assets/css/style.css
+++ b/Testimonial Page/assets/css/style.css
@@ -109,6 +109,7 @@ body{
     display: flex;
     align-items: center;
     gap: 4px;
+    flex-wrap: wrap;
 }
 
 
